# eva-ng

./: .env.example  README.md  pyproject.toml
src/eva/: __init__.py
src/eva/commands/: generate.py  list.py
src/eva/core/: llm.py  prompts.py  react.py  research.py  validators.py
src/eva/tools/: google.py  nist.py  time.py  web.py
src/eva/vulns/dir_traversal/: __init__.py  agent.py  validators.py
